crates/oxidoc/tests/snapshots/golden_writer__mediawiki__table__table-aligned.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
{| class="wikitable"
|-
! style="text-align: left;"| l
! style="text-align: right;"| r
! style="text-align: center;"| c
! d
|-
| style="text-align: left;"| 1
| style="text-align: right;"| 2
| style="text-align: center;"| 3
| 4
|}
