crates/oxidoc/tests/snapshots/golden_writer__mediawiki__table__table-colspan.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
{| class="wikitable"
|-
| colspan="2"| wide
|-
| a
| b
|}
