crates/oxidoc/tests/snapshots/golden_writer__mediawiki__table__table-simple.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
{| class="wikitable"
|-
! h1
! h2
|-
| a
| b
|}
